# simexp

./: .copilot-instructions-jerry-team-v1 copy.md  .copilot-instructions-jerry-team-v1.md  .copilot-instructions-simexp.md  .gitignore  .mcp.markdownit.json  53-GITHUB-ISSUE-INTEGRATION.md  59-ENHANCEMENT_PLAN.md  CDP_SETUP_GUIDE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_ANALYSIS.md  CLEANUP_SUMMARY.md  CLIPBOARD_VALIDATION_SUMMARY.md  FEATURE_PLAN.md  GUILLAUME.md  Makefile  NEXT_STEP_FOR_JERRY.md  PHASE_0_SUMMARY.md  PHASE_10_CODE_REVIEW.md  PHASE_12_DEPLOYMENT_COMPLETE.md  QUICKSTART_GOOGLEDOCS.md  QUICK_REFERENCE.md  README.md  README_GOOGLEDOCS.md  SIMEXP_MCP_QUICKSTART.md  TEST_COMMANDS.md  VALIDATION_PROTOCOL.md  VALIDATION_REPORT.md  bump.py  four_directions_implementation_plan_refined.md  investigate_new_note.py  pyproject.toml  release-all.sh  release.sh  setup.py  synth-launch-integration-plan.md  test_append_direct.py  test_auto_publish.py  test_cdp_connection.py  test_channels.py  (+9 more)
.aureon/: content_reflections.md
.simexp/: collaborators.yaml.template
20251115/: 20251115_Kobo.md  20251115_Nyro.md
20251119/: 20251119_Aureon.md  20251119_H5RfPY.md.md  20251119_Jamai.md
archive/assembly/jamai/: 251011_pypi_publication_session.md  format_harmonies.md
archive/assembly/ledger/: 251013_session_auto_launch_chrome.md  251016_session_issue22.md  251016_session_issue24_bug_fix.md
archive/assembly/nyro/: extraction_patterns.md
archive/assembly/sessionABC/: 251006_multi_channel_experiment.abc  251009_bug_discovery.abc  251011_publish_fixes_debugging.abc  251012_cli_bugfix_harmony.abc  251014_pr_creation_fanfare.abc
archive/assembly/synth/: automation_workflows.md  mcp_integration_guide.md
archive/dev-notes/: gemini-agent-context.md  investigate_note_url_extraction.py  testing-issue36.md
assembly-workspace/: CLAUDE.md  README.md  assembly_session_melody.abc
assembly-workspace/ledger/: 251016_session_synth-focus.md
docs/: 55-FOUR_DIRECTIONS_ENHANCEMENT_PLAN.md  57ENHANCEMENT_PLAN.md  CDP_SETUP_GUIDE.md  ENHANCEMENT_PLAN_SUMMARY.txt  PLAN_SECTIONS_EXPLAINED.md  QUICK_REFERENCE.md  README.md  RECOVERED_FEATURES_USAGE.md  RECOVERY_REPORT.md  RELEASE_NOTES_v0.5.0.md  simexp_four_directions_enhancement_spec.md  simexp_four_directions_team_communication.md
docs/guides/: cdp-setup-simple.md  cross-device-fluidity.md
ledger/: 251006_session_playwright_mcp_integration.md  251009_session_session_aware_notes.md  251012_session_port_standardization.md  251013_session_assembly_extraction_output.md  251016_session_issue26_performance_optimization.md
sessionABC/: 251006_multi_channel_experiment.mid  251006_playwright_flow.abc  251006_simexp_birth.abc  251007_instant_api_symphony.abc  251008_storage_quota_lament.abc  251009_bug_discovery.abc  251009_completion_circle.abc  251009_session_implementation.abc  251010_glyph_sharing_implementation.abc  251011_publish_fixes_debugging.abc  251011_pypi_publication_triumph.abc  251012_port_standardization_9222.abc  251013_assembly_extraction_output.abc  251013_auto_launch_chrome_cdp.abc  251014_merge_symphony.abc  251016_performance_symphony.abc  251016_session_add_bug_fix.abc  251016_session_management_discovery.abc  251018_auto_publish_enhancement.abc
simexp/: channel_writer.py  googledocs_writer.py  playwright_writer.py  session_manager.py  session_sharing.py  simex.py  simexp.yaml.example  timestamp_utils.py
simexp-mcp/: Makefile  pyproject.toml  release.sh
simexp-mcp/simexp_mcp/: __init__.py  server.py  tools.py
test-env/: pyvenv.cfg
tests/: __init__.py  test_drive_create.py  test_mcp_write.py  test_write_headless.py
