[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simexp-mcp"
version = "0.1.2"
description = "MCP (Model Context Protocol) server for simexp web content extraction and archiving"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "gerico1007", email = "gerico@jgwill.com" }
]
keywords = ["mcp", "simplenote", "extraction", "browser-automation", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]

dependencies = [
    "simexp>=0.5.0",
    "mcp>=1.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
simexp-mcp = "simexp_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Gerico1007/simexp"
Documentation = "https://github.com/Gerico1007/simexp/tree/main/simexp-mcp"
Repository = "https://github.com/Gerico1007/simexp"
Issues = "https://github.com/Gerico1007/simexp/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "0.1.1"
